--- a/app/views/backend/namespaces/index.html.erb
+++ b/app/views/backend/namespaces/index.html.erb
@@ -6,6 +6,7 @@
   <thead> 
     <tr> 
       <th>Име</th> 
+      <th width="100px">Навигация?</th> 
       <th width="100px"></th> 
     </tr> 
   </thead> 
@@ -13,6 +14,7 @@
     <% @namespaces.each do |namespace| %>
       <tr>
         <td><%= namespace.get_name %></td>
+        <td><%= (namespace.show?) ? "Да" : "Не" %></td>
         <td><%= link_to "<span>Промени</span>".html_safe, edit_backend_namespace_path(namespace), :class => "icon-link icon-sprite-edit"%></td>
       </tr>
     <% end %>
