--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag :all, :cache => true %>
   <%= javascript_include_tag :defaults, 'jquery.tablesorter.min.js', 'jquery.easing.1.3.js', 'jquery.color.js', :cache => true, :concat => true %>
   <%= csrf_meta_tag %>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <div id="header">
