--- a/app/views/backend/jobs/queue.html.erb
+++ b/app/views/backend/jobs/queue.html.erb
@@ -16,7 +16,7 @@
         <td><%= job.priority %></td>
         <td><abbr title="<%= l job.run_at, :format => :long %>"><%= time_ago_in_words job.run_at %></abbr></td>
         <td><%= job.handler %></td>
-        <td><%= link_to "<span>Изтрий</span>".html_safe, backend_job_path(job), :confirm => 'Are you sure you want to remove this log?', :method => :delete, :class => "icon-link icon-sprite-remove" %></td>
+        <td><%= link_to "<span>Изтрий</span>".html_safe, backend_job_path(job), :confirm => 'Сигурни ли сте, че искате да премахнете тази задача?', :method => :delete, :class => "icon-link icon-sprite-remove" %></td>
       </tr>
     <% end %>
   </tbody>
