--- a/app/views/types/_filter.html.erb
+++ b/app/views/types/_filter.html.erb
@@ -6,6 +6,8 @@
   end
 %>
 
+<% # :ne => "Не е", :nin => "Не в", :e => "Е", :in => "В"  %>
+
 <div class="filter">
     <select name="" class="change-event field-select">
         <option value="title"<%= ("title" == opts[:field]) ? " selected" : "" %>>Title</option>
@@ -14,7 +16,7 @@
       <% end %>
     </select>
     <select name="" class="change-event operation-select">
-      <% {:e => "Е", :ne => "Не е", :like => "Като", :lt => "По-малко", :lte => "По-малко или равно", :gt => "Повече", :gte => "Повече или равно", :in => "В", :nin => "Не в"}.each do |key, value| %>
+      <% {:like => "E", :lt => "По-малко", :lte => "По-малко или равно", :gt => "По-голямо", :gte => "По-голямо или равно"}.each do |key, value| %>
         <option value="<%= key %>"<%= (key.to_s == opts[:operation]) ? " selected" : "" %>><%= value %></option>
       <% end %>
     </select> 
