--- a/app/views/backend/jobs/queue.html.erb
+++ b/app/views/backend/jobs/queue.html.erb
@@ -1,5 +1,9 @@
 <% title "Опашка" %>
-<%= link_to "Назад", backend_jobs_path %> | <%= link_to "<span>Добави задачи</span>".html_safe, new_backend_job_path, :class => "icon-link icon-sprite-new" %>
+<%= link_to "Назад", backend_jobs_path %>
+
+<div class="controls">
+  <%= link_to "<span>Добави задачи</span>".html_safe, new_backend_job_path, :class => "one" %>
+</div> 
 
 <table class="sorted-table"> 
   <thead> 
