--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,18 @@
-<h2>Sign up</h2>
+<% title "Регистрация" %>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <p><%= f.label :email %><br />
+  <p><%= f.label :email, "Имейл" %><br />
   <%= f.text_field :email %></p>
 
-  <p><%= f.label :password %><br />
+  <p><%= f.label :password, "Парола" %><br />
   <%= f.password_field :password %></p>
 
-  <p><%= f.label :password_confirmation %><br />
+  <p><%= f.label :password_confirmation, "Парола отново" %><br />
   <%= f.password_field :password_confirmation %></p>
 
-  <p><%= f.submit "Sign up" %></p>
+  <p><%= f.submit "Регистрация" %></p>
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
