--- a/app/views/entities/show.html.erb
+++ b/app/views/entities/show.html.erb
@@ -3,7 +3,10 @@
 <% unless @entity.is_ok? %>
   <div class="no-info">Все още няма информация за този обект. Очаквайте в най-скоро време обновления.</div>
 <% else %>
-  <%= link_to "<span>Промени</span>".html_safe, edit_entity_path, :class => "icon-link icon-sprite-new" %>  
+  <div class="controls">
+    <%= link_to "<span>Промени</span>".html_safe, edit_entity_path, :class => "left" %>
+    <%= link_to "<span>Версии</span>".html_safe, revisions_entity_path, :class => "right" %>  
+  </div>
   <div style="clear:both;"></div>
   <br />
 
