--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,20 +1,20 @@
-<% title "sign-up" %>
+<% title "Регистрация" %>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <p><%= f.label :email %>
+  <p><%= f.label :email, "Имейл" %>
   <%= f.text_field :email %></p>
 
 <% if @user.password_required? %>
-  <p><%= f.label :password %>
+  <p><%= f.label :password, "Парола" %>
   <%= f.password_field :password %></p>
 
-  <p><%= f.label :password_confirmation %>
+  <p><%= f.label :password_confirmation, "Парола отново" %>
   <%= f.password_field :password_confirmation %></p>
 <% end %>
 
-  <p><%= f.submit "Sign up" %></p>
+  <p><%= f.submit "Регистрация" %></p>
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
