added nice back button

--- a/app/views/backend/jobs/index.html.erb
+++ b/app/views/backend/jobs/index.html.erb
@@ -1,5 +1,5 @@
 <% title "Задачи" %>
-<%= link_to "Назад", "/backend" %>
+<%= link_to "назад", "/backend", :class => "back" %>
 
 <div id="admin-nav">
   <h2 class="first"><%= link_to "Лог", log_backend_jobs_path %></h2> | <h2><%= link_to "Опашка", queue_backend_jobs_path %></h2>
