--- a/app/views/backend/jobs/log.html.erb
+++ b/app/views/backend/jobs/log.html.erb
@@ -1,5 +1,5 @@
 <% title "Лог" %>
-<%= link_to "Назад", backend_jobs_path %>
+<%= link_to "назад", backend_jobs_path, :class => "back" %>
 
 <table class="sorted-table"> 
   <thead> 
