--- a/app/views/backend/jobs/queue.html.erb
+++ b/app/views/backend/jobs/queue.html.erb
@@ -1,5 +1,5 @@
 <% title "Опашка" %>
-<%= link_to "Назад", backend_jobs_path %>
+<%= link_to "назад", backend_jobs_path, :class => "back" %>
 
 <div class="controls">
   <%= link_to "<span>Добави задачи</span>".html_safe, new_backend_job_path, :class => "one" %>
