--- a/app/views/backend/namespaces/edit.html.erb
+++ b/app/views/backend/namespaces/edit.html.erb
@@ -1,6 +1,7 @@
-<% title @title %>
+<% title "Промяна на <span>#{@title}</span>".html_safe %>
+<%= link_to "назад", backend_namespaces_path, :class => "back" %>
 
-<% form_for @namespace, :url =>backend_namespace_path(@namespace) do |f| %>
+<% form_for @namespace, :url => backend_namespace_path(@namespace) do |f| %>
    <% if @namespace.errors.any? %>
   <fieldset id="save-errors">  
     <legend><h2>Грешки</h2></legend>
