--- a/app/views/backend/namespaces/index.html.erb
+++ b/app/views/backend/namespaces/index.html.erb
@@ -1,6 +1,5 @@
 <% title "Типове" %>
-
-<%= link_to "Назад", "/backend" %>
+<%= link_to "назад", "/backend", :class => "back" %>
 
 <table class="sorted-table"> 
   <thead> 
