--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,4 +1,5 @@
 <% title "Регистрация" %>
+<%= link_to "назад", authentications_path, :class => "back" %>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -13,8 +14,7 @@
   <p><%= f.label :password_confirmation, "Парола отново" %>
   <%= f.password_field :password_confirmation %></p>
 <% end %>
-
+	
+	<br />
   <p><%= f.submit "Регистрация" %></p>
 <% end %>
-
-<%= render :partial => "devise/shared/links" %>
